<resources>
    <string name="app_name">Comic_Collaboration</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Welcome to Comic Collaboration</string>
    <string name="text1">Comic Collaboration</string>
    <string name="app_name2">Comic Collaboration</string>
    <string name="companyname">BIG</string>

    <string name="welcome_text">Welcome</string>
    <string name="username_text">User Name</string>
    <string name="usernamehint_text">hint enter user name</string>
    <string name="submit_text">Login Here</string>
    <string name="password_text">Password</string>
    <string name="googleacct_text">Link to Google Account</string>
    <string name="facebkacct_text">Link to Facebook Account</string>
    <string name="usefacebook_text">Use Face Book Login</string>
    <string name="terms_text">Terms &amp; Conditions blah blah blah  . </string>
    <string name="accept_text">Accept</string>
    <string name="decline_text">Decline</string>
    <string name="howtoplay">This is how to play. So how long can this string be before the system errors out. </string>
    <string name="title_activity_terms_conditions">terms_conditions</string>
    <string name="title_activity_account">Account</string>
    <string name="title_activity_report">Report</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_main">Main</string>
    <string name="header_report">Report Abuses</string>
    <string name="header_help">General Help Topics and Overview</string>
    <string name="header_account">User Activity and Profile</string>
    <string name="delete_account_warning">DELETE ALL IS NOT REVERSIBLE</string>
    <string name="terms_conditons">Terms and Conditions</string>
    <string name="return_welcome">Return to Home Screen</string>
    <string name="logo">CC_Logo</string>
    <string name="title_activity_how_to_play">HowToPlay</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- STRINGS FOR THE InGameActivity -->
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="color">Color</string>

    <string name="xsml">Xsmall</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
</resources>
