<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cc_splashbw"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".WelcomeActivity">

    <EditText
        android:id="@+id/username_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText3"
        android:layout_marginBottom="74dp"
        android:background="#ffe7ff17"
        android:enabled="true"
        android:hint="@string/usernamehint_text"
        android:inputType="textPersonName"
        android:maxLength="15"
        android:text="@string/username_text" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText2"
        android:background="#ffe7ff17"
        android:text="@string/submit_text" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/username_editText"

        android:background="#ffe7ff17"
        android:inputType="textPassword"
        android:text="@string/password_text" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:inputType="textPersonName"
        android:text="@string/googleacct_text" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText3"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/facebkacct_text" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editText3"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true">

    </ScrollView>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignLeft="@+id/scrollView"
        android:layout_alignStart="@+id/scrollView"
        android:layout_below="@+id/editText4">

        <RadioButton
            android:id="@+id/buttonradioAccept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept_text"
            android:textColor="#ff000000" />

        <RadioButton
            android:id="@+id/buttonradioDecline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decline_text"
            android:textColor="#ffff1a12" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonHowToPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="How to Play"
        android:nestedScrollingEnabled="true"
        android:onClick="buttonHowToPlay"
        android:layout_alignTop="@+id/radioGroup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Terms &amp; Conditions"
        android:id="@+id/buttonTerms"
        android:layout_alignBottom="@+id/radioGroup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>