<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#FFCCCCCC"
              android:orientation="horizontal"
              tools:context="com.example.dtman.comic_collaboration.InGameActivity">

<LinearLayout
    android:layout_width="50dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="5dp"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/newDrawing_BUTTON"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:contentDescription="@string/start_new"
        android:src="@drawable/iga_pic_new"
        android:onClick="NewButton" />

    <ImageButton
        android:id="@+id/brushSize_BUTTON"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:contentDescription="@string/brush"
        android:src="@drawable/iga_pic_brush"
        android:onClick="ChooseBrushSize" />

    <ImageButton
        android:id="@+id/paintColor_BUTTON"
        android:layout_width="fill_parent"
        android:layout_height="42dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="5dp"
        android:background="#FF000000"
        android:contentDescription="@string/paint"
        android:src="@drawable/iga_paint"
        android:onClick="ChooseColor" />

    <ImageButton
        android:id="@+id/eraseStuff_BUTTON"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:contentDescription="@string/erase"
        android:src="@drawable/iga_pic_eraser"
        android:onClick="EraseButton" />

    <ImageButton
        android:id="@+id/savePic_BUTTON"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:contentDescription="@string/save"
        android:src="@drawable/iga_pic_save"
        android:onClick="SaveButton" />

</LinearLayout>

<com.example.dtman.comic_collaboration.DrawingView
    android:id="@+id/drawing"
    android:layout_width="0dp"
    android:layout_height="fill_parent"
    android:layout_marginBottom="3dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="3dp"
    android:layout_weight="1"
    android:background="#FFFFFFFF"/>
</LinearLayout>
